--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/native-stack": "^6.9.9",
+    "@sanity/client": "^5.2.1",
+    "@sanity/image-url": "^1.0.2",
     "expo": "~47.0.12",
     "expo-status-bar": "~1.4.2",
     "nativewind": "^2.0.11",
     "react": "18.1.0",
+    "react-dom": "18.1.0",
     "react-icons": "^4.7.1",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "~2.8.0",
@@ -24,7 +27,9 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
+    "react-native-url-polyfill": "^1.3.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-web": "~0.18.9",
     "react-navigation": "^4.4.4",
     "tailwindcss-react-native": "^1.7.10"
   },
